syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "UserIdentity.Core.Proto";

package user;

service UserInfoGrpc {
  // Read
  rpc GetAllUsers (GetAllUsersRequest) returns (stream UserResource);

  rpc GetUserById (GetUserByIdRequest) returns (UserResource);
  rpc GetUserByEmail (GetUserByEmailRequest) returns (UserResource);
  // Update
  rpc UpdateUserDetails (UpdateUserDetailsRequest) returns (UserResource);
  // Delete
  rpc DeleteUser (DeleteUserRequest) returns (google.protobuf.Empty);
}

message UserResource {
  string Id = 1;
  string FirstName = 2;
  google.protobuf.StringValue LastName = 3;
  string UserName = 4;
  string Email = 5;
  bool EmailConfirmed = 6;
  repeated string Roles = 7;
}

message GetAllUsersRequest {}

message UpdateUserDetailsRequest {
  string Id = 1;

  google.protobuf.StringValue FirstName = 2;
  google.protobuf.StringValue LastName = 3;
}

message DeleteUserRequest {
  string Id = 1;
}

message GetUserByIdRequest {
  string Id = 1;
}

message GetUserByEmailRequest {
  string Email = 1;
}